# anchor-nft-staking-demo

./: Anchor.toml  package.json  readme.md
programs/demo/: Cargo.toml
programs/demo/src/: lib.rs
tests/: demo.ts  metaplex.ts  utils.ts
